--- a/responsive.css
+++ b/responsive.css
@@ -195,7 +195,7 @@
         top: 62px;
         z-index: 999;
         justify-content: center;
-        position: absolute;
+        position: fixed;
     }
     .container header nav.main .navbar{
         position: fixed;
@@ -244,6 +244,9 @@
     }
     .container .minigame {
         padding-bottom: 50px;
+    }
+    .container .minigame .minigame_container{
+        overflow-y: hidden;
     }
     .container .minigame .box {
         height: 150px;
@@ -295,6 +298,7 @@
     }
     .characters .characters_container {
         transform: translateY(00px);
+        padding-bottom: 100px;
     }
     .characters .characters_container .item{
         padding: 0 30px 0 0px;
