--- a/style.css
+++ b/style.css
@@ -716,6 +716,7 @@ body{
 }
 .container .minigame .news .news_container{
     display: grid;
+
     grid-template-columns: 1fr 1fr 1fr;
     gap: 24px;
     padding: 20px 0;
@@ -725,6 +726,7 @@ body{
     z-index: 5;
     border-radius: 14px;
     transition: all 0.1s linear;
+    height: fit-content;
     overflow: hidden;
     background-image: repeating-linear-gradient(-45deg,#fff,#fff 6px,#fafafa 0,#fafafa 12px);
 }
@@ -735,6 +737,17 @@ body{
     display: flex;
     align-items: center;
     justify-content: center;
+}
+.container .minigame .news .news_container .card .video{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+}
+.container .minigame .news .news_container .card .video video{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 .container .minigame .news .news_container .card .img img{
     width: 100%;
@@ -778,10 +791,16 @@ body{
     padding-left: 10px;
     fill: #fff;
 }
-
-.container .minigame .news .news_container .btn_seemore{
+.container .minigame .news .btn_seemorenews {
     display: flex;
-    justify-self: center;
+    justify-content: center;
+    align-items: center;
+    margin-top: 5px;
+}
+
+.container .minigame .news .btn_seemorenews .btn_seemore{
+    display: flex;
+
     width: fit-content;
     border-radius: 999px;
     border: 2px solid #ffffff;
@@ -794,23 +813,23 @@ body{
     background-color: #ffffff;
     padding: 20px 32px;
 }
-.container .minigame .news .news_container .btn_seemore span{
+.container .minigame .news .btn_seemorenews .btn_seemore span{
     font-size: 20px;
     line-height: 1;
     padding-right: 5px;
 }
-.container .minigame .news .news_container .btn_seemore svg{
+.container .minigame .news .btn_seemorenews .btn_seemore svg{
     width: 14px;
     height: 14px;
     fill: #000000;
     transition: all 0.1s ease-in-out;
 }
 /* hover */
-.container .minigame .news .news_container .btn_seemore:hover{
+.container .minigame .news .btn_seemorenews .btn_seemore:hover{
     background-color: #fff;
     color: #ff7a00;
 }
-.container .minigame .news .news_container .btn_seemore:hover svg{
+.container .minigame .news .btn_seemorenews .btn_seemore:hover svg{
     fill: #ff7a00;
     transform: translateX(5px);
 }
