--- a/responsive.css
+++ b/responsive.css
@@ -6,6 +6,9 @@
         font-size: 22px;
         font-weight: 800;
     }
+    .container header .nav_sub .noti .text img{
+        width: 40px;
+    }
     .container header nav.main{
         top: 62px;
     }
@@ -36,8 +39,8 @@
     .container .home .header_home a.btn_cta{
         padding: 16px 24px;
     }
-    .container .home .header_home a span{
-        font-size: 16px;
+    .container .home .header_home a span span{
+        font-size: 14px;
     }
     .container .home .header_home a svg{
         width: 12px;
@@ -97,15 +100,20 @@
         font-size: 42px;
     }
     .container .minigame .news .news_container{
-        grid-template-columns: 1fr 1fr;
-        overflow-y: none;
-        padding: 10px 0;
+        /* grid-template-columns: 1fr 1fr; */
+        overflow-y: hidden;
+        padding: 10px 10px;
+    }
+    .container .minigame .news .news_container .card{
+        padding: 16px;
+        min-width: 330px;
+        width: 100%;
     }
     .container .minigame .news .news_container .card .content .date{
         font-size: 14px;
     }
     .container .minigame .news .news_container .card .content .title_post{
-        font-size: 16px;
+        font-size: 14px;
     }
     .container .minigame .news .news_container .card .content a span{
         font-size: 14px;
@@ -113,17 +121,16 @@
     .container .minigame .news .news_container .card .content a span svg{
         height: 10px;
     }
-    .container .minigame .news .news_container .btn_seemore{
-        margin-top: 10px;
+    .container .minigame .news .btn_seemorenews .btn_seemore{
+        /* margin-top: 10px; */
         padding: 16px 24px;
-        justify-self: right;
-        transform: translateX(calc(100% - 100px));
+       
     
     }
-    .container .minigame .news .news_container .btn_seemore span{
+    .container .minigame .news .btn_seemorenews .btn_seemore span{
         font-size: 16px;
     }
-    .container .minigame .news .news_container .btn_seemore svg{
+    .container .minigame .news .btn_seemorenews .btn_seemore svg{
         height: 10px;
     }
 
@@ -133,6 +140,7 @@
     }
     .container .shopping .shopping_container .card{
         min-width: 260px;
+        height: fit-content;
         width: auto;
     }
     .container .shopping .shopping_container .card .content .title{
@@ -174,6 +182,9 @@
     .container header .nav_sub .noti .text span{
         font-size:16px;
         font-weight: 800;
+    }
+    .container header .nav_sub .noti .text img{
+        width: 30px;
     }
     .container header .nav_sub .noti .text{
         display: flex;
@@ -266,7 +277,8 @@
         font-size: 40px;
     }
     .container .minigame .news .news_container{
-        grid-template-columns: 1fr;
+        /* grid-template-columns: 1fr; */
+        overflow-y: hidden;
     }
     .container .minigame .news .news_container .btn_seemore{
         margin-top: 0;
@@ -310,5 +322,12 @@
     .characters .characters_container .item .icon svg{
         width: 16px;
         height: 16px;
+    }
+}
+
+
+@media only screen and (max-width: 300px){
+    *{
+        display: none;
     }
 }
