--- a/style.css
+++ b/style.css
@@ -304,6 +304,9 @@ body{
     animation: scroll-left 60s linear infinite;
     white-space: nowrap;
 }
+.container header .nav_sub .noti .text img{
+    width: 50px;
+}
 .container header .nav_sub .noti .text span{
     flex-shrink: 0;
     font-size: 36px;
@@ -462,9 +465,17 @@ body{
     margin-left: 12px;
 }
 .container .home .header_home a span{
-    font-size: 20px;
+    font-size: 16px;
     line-height: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     padding-right: 5px;
+}
+.container .home .header_home a span span{
+    line-height: 1;
+    color: #fff;
 }
 .container .home .header_home a svg{
     width: 14px;
@@ -476,6 +487,10 @@ body{
 .container .home .header_home a:hover{
     background-color: #fff;
     color: #ff7a00;
+}
+.container .home .header_home a:hover span span{
+    color: #ff7a00;
+
 }
 .container .home .header_home a:hover svg{
     fill: #ff7a00;
@@ -556,7 +571,6 @@ body{
     max-width: 1200px;
     width: 100%;
     gap: 24px;
-
 }
 .container .minigame .minigame_container a{
     text-decoration: none;
@@ -716,7 +730,9 @@ body{
 }
 .container .minigame .news .news_container{
     display: grid;
-
+    max-width: 1200px;
+    width: 100%;
+    
     grid-template-columns: 1fr 1fr 1fr;
     gap: 24px;
     padding: 20px 0;
@@ -724,9 +740,11 @@ body{
 
 .container .minigame .news .news_container .card{
     z-index: 5;
-    border-radius: 14px;
+    padding: 18px;
+    border-radius: 24px;
     transition: all 0.1s linear;
     height: fit-content;
+    outline: 2px solid transparent;
     overflow: hidden;
     background-image: repeating-linear-gradient(-45deg,#fff,#fff 6px,#fafafa 0,#fafafa 12px);
 }
@@ -734,6 +752,8 @@ body{
     outline: 2px solid #fff;
 }
 .container .minigame .news .news_container .card .img{
+    border-radius: 16px;
+    overflow: hidden;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -741,6 +761,8 @@ body{
 .container .minigame .news .news_container .card .video{
     display: flex;
     align-items: center;
+    border-radius: 16px;
+    overflow: hidden;
     justify-content: center;
 
 }
@@ -764,7 +786,7 @@ body{
 }
 .container .minigame .news .news_container .card .content .title_post{
     font-weight: 800;
-    font-size: 22px;
+    font-size: 16px;
     line-height: 1.2;   
     color: #000;
 }
@@ -907,8 +929,8 @@ body{
     color: #000;
 }
 .container .shopping .shopping_container .card .content .des{
-    font-weight: 500;
-    font-size: 16px;
+    font-weight: 700;
+    font-size: 18px;
     line-height: 1.3;
     color: #000;
 }
