--- a/responsive.css
+++ b/responsive.css
@@ -249,6 +249,12 @@
         display: flex;
         flex-direction: column;
     }
+    .container header nav.main.active ul img{
+        display: block;
+        position: absolute;
+        bottom: -20px;
+        height: 200px;
+    }
 
     .container .home .home_container{
         grid-template-columns: 1fr;
