--- a/characters.css
+++ b/characters.css
@@ -11,7 +11,7 @@
     position: relative;
     padding: 0 10%;
     background-color: #fff;
-    background-image: url(./images/bannermain.png);
+    background-image: url(./images/bannermain.webp);
     background-size: 1200px;
     background-repeat: repeat;
     background-blend-mode: luminosity;
