--- a/style.css
+++ b/style.css
@@ -510,11 +510,13 @@ body{
 
 .container .minigame{
     padding: 30px 0 150px 0;
-    background-color: #00C2FF;
+    /* background-color: #00C2FF; */
     background-size: 2000px;
     background-position: center;
     background-repeat: repeat;
-    background-image: url(images/bannermain.webp);
+    background: url(/images/bannermain.webp), linear-gradient(-20deg, #bc00b7 5%, #23b2ff 55%);
+
+    
     background-blend-mode: luminosity; 
     position: relative;
     display: flex;
